syntax = "proto3";

option csharp_namespace = "FP.gRPCdotnet.Streaming.Duplex.Contract";

import "google/protobuf/timestamp.proto";

package duplex;

service StreamingServices {
  rpc SendMultiEcho (stream EchoMessage) returns (stream EchoMessage);
}

message EchoMessage {
  string content = 1;
  google.protobuf.Timestamp timestamp = 2;
}
